Fix darkmode flicker!
Wohoooo! This was one of two main issues I had with the theme. This was
really implemented in an unmerged pr from
https://github.com/shafan/DeepThought, so all my thanks to shafan!

--- a/sass/deep-thought.sass
+++ b/sass/deep-thought.sass
@@ -17,6 +17,14 @@ $footer-padding: 1.0rem 2.5rem
     pre
         filter: invert(1) hue-rotate(180deg);
 
+@mixin base_dark
+    body,
+    img,
+    picture,
+    video,
+    pre
+        filter: invert(1) hue-rotate(180deg);
+
 html
     scroll-behavior: smooth
 
